fixed cropping issue
fixed cropping issue

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -2,5 +2,4 @@ img.dog {
 	width: 100%;
 	height: auto;
 	object-fit: cover;
-	max-height: 100vh;
 }
